; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_vdp_ctrl.c_vdp_z80_data_r_m4.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_vdp_ctrl.c_vdp_z80_data_r_m4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fifo = common dso_local global i32* null, align 8
@pending = common dso_local global i64 0, align 8
@vram = common dso_local global i32* null, align 8
@addr = common dso_local global i32 0, align 4
@reg = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @vdp_z80_data_r_m4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vdp_z80_data_r_m4() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @fifo, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 0
  %4 = load i32, i32* %3, align 4
  store i32 %4, i32* %1, align 4
  store i64 0, i64* @pending, align 8
  %5 = load i32*, i32** @vram, align 8
  %6 = load i32, i32* @addr, align 4
  %7 = and i32 %6, 16383
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i32, i32* %5, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** @fifo, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 %10, i32* %12, align 4
  %13 = load i64*, i64** @reg, align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 15
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, 1
  %17 = load i32, i32* @addr, align 4
  %18 = sext i32 %17 to i64
  %19 = add nsw i64 %18, %16
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* @addr, align 4
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
